[Refac]: 역할 단위로 메서드 분리 및 불필요한 val 제거