@@ -83,6 +83,7 @@ public class ProjectService {
     @Transactional
     public void updateProject (Long writerId, Long projectId, ProjectUpdateRequest request) {
         validateImageCount(request.images().length);
+
         Project project = getProjectById(projectId);
         validateWriter(project, writerId);
 
@@ -92,46 +93,61 @@ public class ProjectService {
                 request.logoImage(), request.thumbnailImage(), request.images()
         );
 
-        val relationList = relationRepository.findAllByProjectId(projectId);
-        val relations = relationList.stream()
+        updateProjectMembers(projectId, request);
+        updateProjectLinks(projectId, request);
+    }
+
+    private void updateProjectMembers(Long projectId, ProjectUpdateRequest request) {
+        List<MemberProjectRelation> existingRelations = relationRepository.findAllByProjectId(projectId);
+        Map<Long, MemberProjectRelation> relationMap = existingRelations.stream()
                 .collect(Collectors.toMap(MemberProjectRelation::getUserId, Function.identity()));
-        val relationUserSet = Set.copyOf(relationList.stream().map(MemberProjectRelation::getUserId).collect(Collectors.toList()));
-        val requestedRelationUserSet = Set.copyOf(request.members().stream()
+
+        Set<Long> requestedUserIds = request.members().stream()
                 .map(ProjectUpdateRequest.ProjectMemberUpdateRequest::memberId)
-                .toList());
+                .collect(Collectors.toSet());
 
-        relationRepository.deleteAll(relationUserSet.stream()
-                .filter(e -> !requestedRelationUserSet.contains(e))
-                .map(relations::get)
-                .collect(Collectors.toList())
-        );
+        List<MemberProjectRelation> relationsToRemove = relationMap.keySet().stream()
+                .filter(id -> !requestedUserIds.contains(id))
+                .map(relationMap::get)
+                .toList();
+        relationRepository.deleteAll(relationsToRemove);
 
-        relationRepository.saveAll(request.members().stream().map(memberRequest -> {
-            if (relations.containsKey(memberRequest.memberId())) {
-                return relations.get(memberRequest.memberId())
-                        .updateAll(
+        List<MemberProjectRelation> relationsToSave = request.members().stream()
+                .map(memberRequest -> {
+                    Long memberId = memberRequest.memberId();
+                    if (relationMap.containsKey(memberId)) {
+                        return relationMap.get(memberId).updateAll(
                                 memberRequest.memberRole(),
                                 memberRequest.memberDescription(),
                                 memberRequest.isTeamMember()
                         );
-            } else {
-                return MemberProjectRelation.builder()
-                        .projectId(project.getId())
-                        .userId(memberRequest.memberId())
-                        .role(memberRequest.memberRole())
-                        .description(memberRequest.memberDescription())
-                        .isTeamMember(memberRequest.isTeamMember())
-                        .build();
-            }
-        }).collect(Collectors.toList()));
+                    } else {
+                        return MemberProjectRelation.builder()
+                                .projectId(projectId)
+                                .userId(memberId)
+                                .role(memberRequest.memberRole())
+                                .description(memberRequest.memberDescription())
+                                .isTeamMember(memberRequest.isTeamMember())
+                                .build();
+                    }
+                })
+                .toList();
 
+        relationRepository.saveAll(relationsToSave);
+    }
+
+    private void updateProjectLinks(Long projectId, ProjectUpdateRequest request) {
         projectLinkRepository.deleteAllByProjectId(projectId);
-        projectLinkRepository.saveAll(request.links().stream().map(linkRequest -> ProjectLink.builder()
-                .projectId(project.getId())
-                .title(linkRequest.linkTitle())
-                .url(linkRequest.linkUrl())
-                .build()).toList());
 
+        List<ProjectLink> linksToSave = request.links().stream()
+                .map(linkRequest -> ProjectLink.builder()
+                        .projectId(projectId)
+                        .title(linkRequest.linkTitle())
+                        .url(linkRequest.linkUrl())
+                        .build()
+                ).toList();
+
+        projectLinkRepository.saveAll(linksToSave);
     }
 
     @Transactional
